2013-03-07 Jérôme Pasquier  <rainbru@free.fr>

	* src/interdep/: change GNU headers date for 2013 in all files.
	* src/ogreGui/: change GNU headers date for 2013 in all files.
	* src/maincore/: change GNU headers date for 2013 in all files.
	* src/server/: change GNU headers date for 2013 in all files.

2013-03-04 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/: change GNU headers date for 2013 in all files.
	* src/client/: change GNU headers date for 2013 in all files.
	* src/design/: change GNU headers date for 2013 in all files.

2013-02-27 Jérôme Pasquier  <rainbru@free.fr>

	* src/oldOgreGui/: change GNU headers date for 2013 in all files.
	* src/examples/: change GNU headers date for 2013 in all files.
	* src/terminalapi/: change GNU headers date for 2013 in all files.
	* src/tests/common/: change GNU headers date for 2013 in all files.

2013-02-26 Jérôme Pasquier  <rainbru@free.fr>

	* src/tests/tapi/: change GNU headers date for 2013 in all files.
	* src/editor/: change GNU headers date for 2013 in all files.
	* src/tools/netflooder/: change GNU headers date for 2013 in all files.
	* src/tools/ftpclient/: change GNU headers date for 2013 in all files.
	* src/tools/hashsum/: change GNU headers date for 2013 in all files.
	* src/tools/transmsg/: change GNU headers date for 2013 in all files.
	* */Makefile.am: change GNU headers date for 2013 in all files.

2013-02-19 Jérôme Pasquier  <rainbru@free.fr>

	* src/testHelpers: change GNU headers date for 2013 in all files.
	* IrrClient/: change GNU headers date for 2013 in all files.

2013-02-12 Jérôme Pasquier  <rainbru@free.fr>

	* src/design/Makefile.am: fix an issue with moc_% custom
	rule due to .hpp headers.

2012-12-25 Jérôme Pasquier  <rainbru@free.fr>

	* src/testHelpers/DummyRenderSystem.hpp: add 3 pure virtual
	functions override to build on Ogre 1.8.1

2012-12-23 Jérôme Pasquier  <rainbru@free.fr>

	* src/client/Launcher.cpp (createRenderCombo): Ogre root's