@@ -115,7 +115,8 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-216 (14 jun 2012 - ???) SLOC ??? UT ??? FT ???:??
-- (5) Changed GNU headers date for 2013
+- (6) Fix some building errors on Ubuntu
+- Changed GNU headers date for 2013
    IrrClient, testHelpers, tools, editor, tests, terminalapi, examples
    oldOgreGui, design, client, common, maincore, server, ogreGui,
    interdep
