@@ -1,1 +1,1 @@
-/usr/share/automake-1.11/mdate-sh
+/usr/share/automake-1.10/mdate-sh
